0.75.0 (??)
  * Bug fixed in Exception text when field names was not matching the database
  
0.74.0 (19 Nov 2014)
  * Added support for more field/accessors naming conventions
  * Allow static methods in model classes
  * An exception will now be thrown if you try to move Realm, RealmResults or RealmObject between threads.
  * Fixed a bug in the calculation of the maximum of date field in a RealmResults
  * Adding case sensitive versions of string comparison operators equalTo and notEqualTo
  * Adding where() to RealmList to initiate queries
  * Updated core to 0.86.0, fixing a bug in cancelling an empty transaction, and major query speedups with floats/doubles
  * Consistent handling of UTF-8 strings
  * removeFromRealm() now calls moveLastOver() which is faster and more reliable when deleting multiple objects
  * Added verification of fields names in queries with links.
  * Added exception for queries with invalid field name

0.73.1 (05 Nov 2014)
  * Fixed a bug that would send infinite notifications in some instances

0.73.0 (04 Nov 2014)
  * Fixed a bug not allowing queries with more than 1024 conditions
  * Rewritten the notification system. The API did not change but it's now much more reliable
  * Added support for switching auto-refresh on and off (Realm.setAutoRefresh)
  * Added RealmBaseAdapter and an example using it
  * Added deleteFromRealm() method to RealmObject

0.72.0 (27 Oct 2014)
  * Extended sorting support to more types: boolean, byte, short, int, long, float, double, Date, and String
    fields are now supported
  * Better support for Java 7 and 8 in the annotations processor
  * Better support for the Eclipse annotations processor
  * Added Eclipse support to the distribution folder
  * Added Realm.cancelTransaction() to cancel/abort/rollback a write transaction
  * Faster implementation of RealmQuery.findFirst()
  * Upgraded core to 0.85.1 (deep copying of strings in queries; preparation for link queries)