@@ -1,6 +1,7 @@
 0.75.0 (??)
   * Bug fixed in Exception text when field names was not matching the database
-  
+  * Bug fixed in RealmResults which prevents subquerying  
+
 0.74.0 (19 Nov 2014)
   * Added support for more field/accessors naming conventions
   * Allow static methods in model classes
